# invoice_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_web.py
.github/workflows/: ci.yml
baca_invoice/: .env_example  agent.py
baca_invoice/agents/: __init__.py  flight.py  hotel.py  prompts.py
baca_invoice/tools/: __init__.py  authenticity.py  pdf.py
docs/: PINTER_API_CONTRACT.md
invoice_verifier/: .gitignore  CLAUDE.md  README.md
invoice_verifier/.specify/: feature.json
invoice_verifier/baca_invoice/: .env_example  agent.py
invoice_verifier/baca_invoice/agents/: __init__.py  document.py  flight.py  formatter.py  hotel.py  invoice.py  postprocess.py  prompts.py  receipt.py
invoice_verifier/baca_invoice/models/: __init__.py  authenticity.py  flight.py  hotel.py  invoice.py  receipt.py  travel_document.py  unknown.py
invoice_verifier/baca_invoice/tools/: __init__.py  authenticity.py  combined.py  constants.py  pdf.py
invoice_verifier/docs/api/: API.md  travel_api_contract.json  travel_api_postman_collection.json
invoice_verifier/invoice_verifier/: CLAUDE.md
invoice_verifier/invoice_verifier/.specify/: feature.json
invoice_verifier/specs/001-add-travel-api-contract/: plan.md  spec.md  tasks.md
invoice_verifier/web/: API.md  config.py  dependencies.py  main.py  middleware.py  rate_limit.py  security.py
tests/: conftest.py
tests/integration/: test_pinter_extract.py  test_upload.py
tests/security/: test_path_traversal.py
tests/unit/: test_job_model.py  test_new_models.py
(+43 files in other folders)
