[project]
name = "invoice-verifier"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = []  # see requirements.txt

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["invoice_verifier"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "A"]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # FastAPI uses Depends()/Query() in defaults by design
]

[tool.ruff.lint.per-file-ignores]
"invoice_verifier/baca_invoice/agents/prompts.py" = ["E501"]  # long prompt strings

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
